== Groups by itthinx - changelog.txt

= 2.16.0 =
* WordPress 6.0 compatible.
* Fixed slashes appearing in term-related group names in the Groups column of the administrative screens for posts.
* Updated Groups menu position to straight integer for WordPress 6.x compatibility.
* Fixed use of undefined variable in legacy code.
* Add-Ons section updated.

= 2.15.0 =
* WordPress 5.9 compatible.
* Revised block titles and removed redundant "Block" part.
* Updated the German translation.
* Added German formal and informal translations for Germany, Austria and Switzerland.
* Updated the Spanish translation.
* Updated the French translation.
* Updated the Indonesian translation.
* Updated partial translations.
* Added clarification on applicable post type access restrictions.
* Revised notice on supporting Groups.
* Removed the option to show legacy settings unless already enabled, or showing is enabled via the GROUPS_SHOW_LEGACY_SETTINGS constant.

= 2.14.1 =
* Removed outdated changelog section info.
* Updated Add-Ons section and removed entry for subsumed integration.

= 2.14.0 =
* WordPress 5.8 compatible.
* Minimum WordPress version 5.5 is required.
* Updated block registration to hook on the block_categories_all filter instead of the depdrecated block_categories filter.
* Updated block scripts based on wp-scripts instead of cgb-scripts.
* Imporved block UX to avoid confusing style-toggling when a block is selected.
* Fixed slashes would appear in group names offered in block group selection.
* Improved groups and capabilities admin pagination appearance to show navigation items as buttons.
* Fixed Groups > Groups admin section search by group name issues with quotes and improper query escaping.
* Fixed Groups > Capabilities admin section search by capability name issues with quotes and improper query escaping.
* Fixed [groups_member] and [groups_non_member] shortcodes not handling group names with quotes correctly.

= 2.13.0 =
* WordPress 5.7 compatible.