@@ -6,6 +6,7 @@
 * Updated Groups menu position to straight integer for WordPress 6.x compatibility.
 * Fixed use of undefined variable in legacy code.
 * Add-Ons section updated.
+* Revised Groups' menu icon.
 
 = 2.15.0 =
 * WordPress 5.9 compatible.
